# EcomSeller

./: .env_example  README.md  docker-compose.yaml  main.py  pyproject.toml  script.py
api/: routers.py  schemas.py
clickhouse/: connect.py  crud.py
config/: config.py
ozon/: api.py
services/: etgb.py
